# ansible-collection-alnpir-main

./: .gitmodules  .pre-commit-config.yaml  README.md  ansible.cfg  galaxy.yml  pyproject.toml  tasks.py
.github/workflows/: manual.yml  pre-commit.yml
extensions/molecule/default/: converge.yml
meta/: runtime.yml
playbooks/: atomic_red_team.yml  configure_instances.yml  dummy.yml  infrastructure.yml  ping.yml  podman.yml  site.yml
playbooks/files/podman/nginx/: Containerfile  index.html
playbooks/tasks/: dummy.yml  podman.yml
playbooks/vars/group_vars/: all.yml
plugins/inventory/: terraform.yml
plugins/modules/: dummy.py
roles/dummy/: README.md
roles/dummy/meta/: main.yml
roles/dummy/tasks/: main.yml
roles/dummy/tests/: test.yml
roles/dummy/vars/: main.yml
terraform/: main.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: cloud-init.yml
